tdf#149049 give media object a name when created

so it is shown in the Navigator

Change-Id: Ia4e9c847a1a8cfbaa3465f1472d4b899f4bde3fa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134334
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>